tests/asm-link/label-scope/rgbasm.err
error: cannot delete built-in symbol `@`
   ╭─[ test.asm:3:7 ]
   │
 3 │ PURGE @, ., ..
   │       ┬  
   │       ╰── cannot perform this deletion
───╯
error: cannot delete built-in symbol `.`
   ╭─[ test.asm:3:10 ]
   │
 3 │ PURGE @, ., ..
   │          ┬  
   │          ╰── cannot perform this deletion
───╯
error: cannot delete built-in symbol `..`
   ╭─[ test.asm:3:13 ]
   │
 3 │ PURGE @, ., ..
   │             ─┬  
   │              ╰── cannot perform this deletion
───╯
error: cannot delete built-in symbol `@`
    ╭─[ test.asm:12:7 ]
    │
 12 │ PURGE @, ., ..
    │       ┬  
    │       ╰── cannot perform this deletion
────╯
error: cannot delete built-in symbol `.`
    ╭─[ test.asm:12:10 ]
    │
 12 │ PURGE @, ., ..
    │          ┬  
    │          ╰── cannot perform this deletion
────╯
error: cannot delete built-in symbol `..`
    ╭─[ test.asm:12:13 ]
    │
 12 │ PURGE @, ., ..
    │             ─┬  
    │              ╰── cannot perform this deletion
────╯
6 errors generated.
